noinst_LTLIBRARIES = libDocument.la

libDocument_la_CPPFLAGS = $(AM_CPPFLAGS)
libDocument_la_CXXFLAGS = $(AM_CXXFLAGS)
libDocument_la_SOURCES = \
    Document.cpp \
    DocumentReader.cpp \
    DocumentWriter.cpp \
    TransitionEnumerator.cpp

noinst_HEADERS = \
    Document.hpp \
    DocumentReader.hpp \
    DocumentWriter.hpp \
    TransitionEnumerator.hpp
