noinst_LTLIBRARIES = libPseudoCode.la

libPseudoCode_la_CPPFLAGS = $(AM_CPPFLAGS)
libPseudoCode_la_CXXFLAGS = $(AM_CXXFLAGS)
libPseudoCode_la_SOURCES = \
    PseudoCode.cpp \
    PseudoCodeTraversal.cpp \
    PseudoCodeAccessor.cpp \
    BasicPseudoCodeGenerator.cpp \
    Language/Token.cpp \
    Language/Scanner.cpp \
    Language/Parser.cpp

noinst_HEADERS = \
    PseudoCode.hpp \
    PseudoCodeTraversal.hpp \
    PseudoCodeAccessor.hpp \
    BasicPseudoCodeGenerator.hpp \
    Language/Token.hpp \
    Language/Scanner.hpp \
    Language/Parser.hpp
