noinst_LTLIBRARIES = libKotlinFormat.la

libKotlinFormat_la_CPPFLAGS = $(AM_CPPFLAGS)
libKotlinFormat_la_CXXFLAGS = $(AM_CXXFLAGS)
libKotlinFormat_la_SOURCES = \
    StateMachineGenerator.cpp \
    PseudoCodeGenerator.cpp

noinst_HEADERS = \
    StateMachineGenerator.hpp \
    PseudoCodeGenerator.hpp
