noinst_LTLIBRARIES = libSmFormat.la

libSmFormat_la_CPPFLAGS = $(AM_CPPFLAGS)
libSmFormat_la_CXXFLAGS = $(AM_CXXFLAGS)
libSmFormat_la_SOURCES = \
    PseudoCodeLoader.cpp \
    Parser.cpp \
    Scanner.cpp \
    Token.cpp

noinst_HEADERS = \
    PseudoCodeLoader.hpp \
    Parser.hpp \
    Scanner.hpp \
    Token.hpp
