noinst_LTLIBRARIES = libSwiftFormat.la

libSwiftFormat_la_CPPFLAGS = $(AM_CPPFLAGS)
libSwiftFormat_la_CXXFLAGS = $(AM_CXXFLAGS)
libSwiftFormat_la_SOURCES = \
    StateMachineGenerator.cpp \
    PseudoCodeGenerator.cpp \
    EnumGenerator.cpp

noinst_HEADERS = \
    StateMachineGenerator.hpp \
    PseudoCodeGenerator.hpp \
    EnumGenerator.hpp
